# entrain

./: .gitignore  CHANGELOG.md  HANDOFF_PHASE3.md  LICENSE  PHASE3.5_PROGRESS.md  PHASE3.5_SUMMARY.md  PHASE4.2_SUMMARY.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements-audio.txt  requirements-dev.txt  requirements.txt
docs/: AGENT.md  ARCHITECTURE.md  README.md  RESEARCH.md
docs/framework/: FRAMEWORK.md
docs/internal/: HANDOFF_INTERPRETATION.md  INTERPRETATION_REWORK.md
docs/internal/build-log/: HANDOFF.md  NEXT_PHASE.md  NEXT_STEPS.md  PHASE1_5_CALIBRATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETION.md  PHASE3_SUMMARY.md  PHASE3_VERIFICATION.md  PHASE4.1_SUMMARY.md  PHASE4_COMPLETE.md  PYTHON39_COMPAT.md  ROADMAP.md  SCOPING_SESSION.md  verify_installation.py
docs/project/: VISION.md
docs/technical/: ARCHITECTURE.md  README.md
entrain/: __init__.py  cli.py  models.py
entrain/analysis/: __init__.py  cross_dimensional.py
entrain/dimensions/: __init__.py  autonomy_erosion.py  base.py  dependency_formation.py  linguistic_convergence.py  prosodic_entrainment.py  reality_coherence.py  sycophantic_reinforcement.py
entrain/features/: __init__.py  audio.py  temporal.py  text.py
entrain/features/data/: attribution_patterns.json  hedging_patterns.json  validation_phrases.json
entrain/parsers/: __init__.py  base.py  characterai.py  chatgpt.py  claude.py  generic.py
entrain/reporting/: __init__.py  csv_export.py  json_report.py  markdown_report.py
examples/: analyze_chatgpt_export.py  cross_dimensional_analysis.py  phase3_audio_analysis.py  synthetic_conversation.py
playground/: README.md
tests/: conftest.py  test_models.py  test_parsers.py
tests/test_analysis/: __init__.py  test_cross_dimensional.py
tests/test_dimensions/: test_autonomy_erosion.py  test_dependency_formation.py  test_linguistic_convergence.py  test_prosodic_entrainment.py  test_reality_coherence.py  test_sycophantic_reinforcement.py
tests/test_features/: README.md  test_audio.py  test_temporal_features.py  test_text_features.py
